--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -15,4 +15,4 @@ jobs:
       run: pip install -r requirements.txt  # Assurez-vous d'installer les dépendances nécessaires
 
     - name: Exécuter les tests
-      run: pytest -m tests/
+      run: pytest tests/
