--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Installer les dépendances
-      run: pip install -r requirements.txt  # Assurez-vous d'installer les dépendances nécessaires
+      run: pip install -r requirements.txt
 
     - name: Exécuter les tests
       run: pytest tests/
