--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ kiwisolver==1.4.5
 lightgbm==4.2.0
 Mako==1.3.0
 Markdown==3.5.1
+streamlit==1.33.0
 MarkupSafe==2.1.3
 matplotlib==3.7.4
 mlflow==2.9.2
