--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.13.1
+altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
+attrs==23.2.0
 blinker==1.7.0
+cachetools==5.3.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -13,7 +16,7 @@ docker==6.1.3
 entrypoints==0.4
 exceptiongroup==1.2.0
 fastapi==0.109.2
-flask==3.0.0
+Flask==3.0.0
 fonttools==4.47.0
 gitdb==4.0.11
 GitPython==3.1.40
@@ -24,33 +27,46 @@ idna==3.6
 imbalanced-learn==0.11.0
 importlib-metadata==7.0.1
 importlib-resources==6.1.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 lightgbm==4.2.0
 Mako==1.3.0
 Markdown==3.5.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.7.4
+mdurl==0.1.2
 mlflow==2.9.2
 numpy==1.24.4
 oauthlib==3.2.2
 packaging==23.2
 pandas==2.0.3
 pillow==10.2.0
+plotly==5.21.0
+pluggy==1.5.0
 protobuf==4.25.1
 pyaml==23.12.0
 pyarrow==14.0.2
 pydantic==2.6.1
-pydantic-core==2.16.2
+pydantic_core==2.16.2
+pydeck==0.9.0b1
+Pygments==2.17.2
 PyJWT==2.8.0
 pyparsing==3.1.1
+pytest==8.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 querystring-parser==1.2.4
+referencing==0.35.0
 requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
 scikit-learn==1.3.2
 scikit-optimize==0.9.0
 scipy==1.10.1
@@ -61,15 +77,19 @@ sniffio==1.3.0
 SQLAlchemy==2.0.25
 sqlparse==0.4.4
 starlette==0.36.3
+streamlit==1.33.0
 tabulate==0.9.0
+tenacity==8.2.3
 threadpoolctl==3.2.0
-typing-extensions==4.9.0
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+tornado==6.4
+typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
 uvicorn==0.27.1
+watchdog==4.0.0
 websocket-client==1.7.0
-werkzeug==3.0.1
+Werkzeug==3.0.1
 zipp==3.17.0
-pytest == 8.1.1
-plotly==5.21.0
-streamlit==1.33.0
