--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -45,5 +45,5 @@ jobs:
             docker stop docker_scoring_credit
             docker rm docker_scoring_credit
             docker pull ec2-13-39-148-129.eu-west-3.compute.amazonaws.com/docker_scoring_credit:latest
-            docker run -d -p 8501:8501 -8000:8000 ec2-13-39-148-129.eu-west-3.compute.amazonaws.com/docker_scoring_credit:latest
+            docker run -d -p 8501:8501 -p 8000:8000 ec2-13-39-148-129.eu-west-3.compute.amazonaws.com/docker_scoring_credit:latest
 
