--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -35,9 +35,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22 
           script: |
-            cd scoring_credit
+            cd scoring_credit/
             git pull
-            docker build -t docker_scoring_credit .
-            docker rm docker_scoring_credit || true 
-            docker run -d -p 8501:8501 -p 8000:8000 --name docker_scoring_credit docker_scoring_credit:latest
+            sudo docker build -t docker_scoring_credit .
+            sudo docker rm docker_scoring_credit || true 
+            sudo docker run -d -p 8501:8501 -p 8000:8000 --name docker_scoring_credit docker_scoring_credit:latest
 
