--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -37,7 +37,8 @@ jobs:
           script: |
             cd scoring_credit/
             git pull
+            sudo docker stop docker_scoring_credit || true
+            sudo docker rm docker_scoring_credit || true
             sudo docker build -t docker_scoring_credit .
-            sudo docker rm docker_scoring_credit || true 
             sudo docker run -d -p 8501:8501 -p 8000:8000 --name docker_scoring_credit docker_scoring_credit:latest
 
