--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -37,6 +37,7 @@ jobs:
           script: |
             cd scoring_credit/
             git pull
+            sudo docker ps
             sudo docker stop docker_scoring_credit || true
             sudo docker rm docker_scoring_credit || true
             sudo docker build -t docker_scoring_credit .
