--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -41,5 +41,5 @@ jobs:
             sudo docker stop docker_scoring_credit
             sudo docker rm docker_scoring_credit
             sudo docker build -t docker_scoring_credit .
-            sudo docker run -d -p 8501:8501 -p 8000:8000sudo docker run -d -p 8501:8501 -p 8000:8000 --name docker_scoring_credit docker_scoring_credit:latest
+            sudo docker run -d -p 8501:8501 -p 8000:8000 --name docker_scoring_credit docker_scoring_credit:latest
 
