--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -38,7 +38,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22 
           script: |
+            cd scoring credit
             git pull
+            cd ..
             sudo systemctl restart docker
             sudo docker stop docker_scoring_credit
             sudo docker rm docker_scoring_credit
