--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -42,6 +42,6 @@ jobs:
             sudo docker stop docker_scoring_credit
             sudo docker rm docker_scoring_credit
             sudo docker build --no-cache -t docker_scoring_credit .
-            sudo docker run -p 8501:8501 -p 8000:8000 scoring_app
+            sudo docker run -p 8501:8501 -p 8000:8000 docker_scoring_credit
 
 
